--- a/style.css
+++ b/style.css
@@ -3,21 +3,70 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background-color: rebeccapurple;
-}
-main{
+header{
+    background-color: blueviolet;
+    height: 6vw;
+    color: yellow
     
-    border: solid 10px cornflowerblue;
 }
-.lanches{
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    justify-content: space-evenly;
-}
-img{
-    width: 22vw;
-    height: 22vh;
+
+
+ul{
+    padding-top: 3.8vh;
+
 
 }
+li{
+    display: inline-block;
+    font-size: 30px;
+    border: solid yellow 4px;
+    border-radius: 20px;
+    margin-left: 12.2vw;
+}
+li:hover{
+    transform: scale(130%);
+    color: white;
+}   
+
+.lanches{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 90vw;
+    background-color: brown;
+}
+.bogies{
+    width: 22vw;
+    height: 22vh;
+}
+footer{
+    background-color: rebeccapurple;
+    color: aliceblue;
+    font-size: 18px;
+    font-family: cursive;
+    height: 20vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+nav {
+    margin-left: 3vw;
+    margin-top: vw;
+}
+ol:hover{
+    transform: scale(110%);
+    color: blue;
+}
+img{
+    height: 30px;
+    width: 30px;
+    display: flex;
+    margin-top: 2vh;
+    justify-content: space-evenly 3vw;
+}
+.zap{
+    border-radius: 8px;
+}
+
+
+   
